Fix range styling on Firefox

--- a/QWC2Components/components/style/App.css
+++ b/QWC2Components/components/style/App.css
@@ -37,12 +37,14 @@ input[type=range]{
     outline: none;
 }
 
-input[type=range]::-webkit-slider-runnable-track {
+input[type=range]::-webkit-slider-runnable-track,
+input[type=range]::-moz-range-track {
     background: #ddd;
     height: 4px;
 }
 
-input[type=range]::-webkit-slider-thumb {
+input[type=range]::-webkit-slider-thumb,
+input[type=range]::-moz-range-thumb {
     -webkit-appearance: none;
     border: 1px solid @map_button_bg@;
     border-radius: 50%;
